shared/src/test/data/yeast/invalid-json/incomplete-entry-5.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Indicator           5,  2,  3 '\"'
EndScalar           6,  2,  4 ''
LineBreak           6,  2,  4 '\n'
EndMapping          7,  3,  0 '}'
